bmesh.ops.* parameter lists and descriptions don't show in PyConsole on auto-complete #34870

Closed
opened 2013-04-04 21:53:53 +02:00 by CodeManX · 3 comments
Member

%%%--- Blender version with error, and version that worked ---
2.66.5

bmesh.ops.solidify(

solidify()

Docs:
http://www.blender.org/documentation/blender_python_api_2_66_4/bmesh.ops.html#bmesh.ops.solidify
%%%

%%%--- Blender version with error, and version that worked --- 2.66.5 >>> bmesh.ops.solidify( solidify() Docs: http://www.blender.org/documentation/blender_python_api_2_66_4/bmesh.ops.html#bmesh.ops.solidify %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r55829.%%%

%%%fixed r55829.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#34870
No description provided.