fix [#34870] bmesh.ops.* parameter lists and descriptions don't show in PyConsole on auto-complete

more a feature request then a bug but nice to have __doc__ on bmesh operators.